Final fixes for the media gallery.

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -501,7 +501,8 @@ h2.site-name {
 
 .view-species-media .view-content ul li.views-row,
 .page-gallery .file-image,
-.page-gallery .file-video{
+.page-gallery .file-video,
+.page-gallery .file-audio{	
   float: left;
   margin: 0 10px 10px 0;
   border: 1px solid #999;
