Fix for http://dev.scratchpads.eu/node/722

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -85,7 +85,7 @@ h1,
 h1.site-name, 
 h2.site-name,
 h3{
-	font-family: 'FontinSansRegular', Georgia, serif;
+	font-family: 'FontinSansRegular', Georgia, serif !important;
 }
 
 h1, 
