Tweak the themeing a little.

--- a/sites/all/modules/custom/blockexpose/css/blockexpose.css
+++ b/sites/all/modules/custom/blockexpose/css/blockexpose.css
@@ -1,11 +1,11 @@
 /* WHOLE BLOCK */
 .blockexpose{
- width:400px;	
+ width:395px;	
  position:fixed;
  background-color:transparent;
  padding:0 !important;
  opacity:0.95;
- z-index:500;
+ z-index:601;
 }
 .blockexpose.right{
  right:-375px
@@ -13,15 +13,15 @@
 .blockexpose.left{
 	left:-375px;
 }
-.side-number-1{top:20px;}
-.side-number-2{top:150px;}
-.side-number-3{top:280px;}
-.side-number-4{top:410px;}
-.side-number-5{top:540px;}
-.side-number-6{top:670px;}
-.side-number-7{top:800px;}
-.side-number-8{top:930px;}
-.side-number-9{top:1060px;}
+.side-number-1{top:40px;}
+.side-number-2{top:170px;}
+.side-number-3{top:300px;}
+.side-number-4{top:430px;}
+.side-number-5{top:560px;}
+.side-number-6{top:690px;}
+.side-number-7{top:820px;}
+.side-number-8{top:950px;}
+.side-number-9{top:1080px;}
 
 /* CLICK TAB */
 .open-close{
@@ -36,12 +36,12 @@
 }
 .blockexpose.right .open-close{
  float:left;
- border-right: solid 1px #fff;
+ border-right: solid 1px #666666;
  left:0;
 }
 .blockexpose.left .open-close{
  float:right;
- border-left: solid 1px #fff;
+ border-left: solid 1px #666666;
  right:0;
 }
 .open-close:hover{
@@ -50,7 +50,7 @@
 .open-close p{
  font-family:arial,sans-serif;	
  font-size:14px;
- color:#333;
+ color:white;
  border:0px solid red;
  writing-mode:tb-rl;
  -webkit-transform:rotate(90deg);
@@ -68,7 +68,7 @@
  min-height:200px;
  width:368px;
  border: solid 1px black;
- padding:10px;
+ padding:5px;
  top:0;
  position:absolute;
 }
@@ -95,15 +95,20 @@
  -webkit-border-bottom-right-radius:5px;
 }
 .blockexpose.right .open-close, .blockexpose.right .subcontent{
- -moz-box-shadow: -3px 3px 3px #bbb;
- -webkit-box-shadow: -3px 3px 3px #bbb;
- box-shadow: -3px 3px 3px #bbb;
+ -moz-box-shadow: -3px 3px 3px #333333;
+ -webkit-box-shadow: -3px 3px 3px #333333;
+ box-shadow: -3px 3px 3px #333333;
 }
 .blockexpose.left .open-close, .blockexpose.left .subcontent{
- -moz-box-shadow: 3px 3px 3px #bbb;
- -webkit-box-shadow: 3px 3px 3px #bbb;
- box-shadow: 3px 3px 3px #bbb;
+ -moz-box-shadow: 3px 3px 3px #333333;
+ -webkit-box-shadow: 3px 3px 3px #333333;
+ box-shadow: 3px 3px 3px #333333;
 }
 .open-close, .blockexpose .subcontent{
- background-color:#fff;
+ background:none repeat scroll 0 0 #666666
+}
+.blockexpose.left .subcontent>*{
+ background-color:white;
+ border:solid 1px black;
+ border-left:none;
 }
