--- a/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
@@ -85,3 +85,8 @@
   width: 126px!important;
   height: 93px!important;
 }
+
+/* Item list fix */
+.page-scratchpads-front .block-system ul{
+  margin-left: 30px;
+}
