themed comment css

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -806,3 +806,10 @@ width: 300px;
   z-index: 100;
 }
 
+/****************** Comments *****************/
+#comments h2{
+  background: transparent!important;
+  color: #3E3E3E;
+  padding: 0;
+}
+
