--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -535,8 +535,7 @@ h2.site-name {
 
 /************************ NODES *********************/ 
 
-.node .submitted,
-.eolapi-text-rights{
+.node .submitted{
   color: #888;
   font-size: 0.9em;
   text-align: right;
