Updated slickgrid for char proj changes

--- a/sites/all/modules/custom/slickgrid/css/slickgrid.controls.css
+++ b/sites/all/modules/custom/slickgrid/css/slickgrid.controls.css
@@ -15,6 +15,7 @@
 #slickgrid-add,
 #slickgrid-add span.slickgrid-control-button{
   width: auto!important;
+   color: #000;  
 }
 
 #slickgrid-add span.slickgrid-control-button{
