--- a/sites/all/modules/contrib/linkit/css/linkit.css
+++ b/sites/all/modules/contrib/linkit/css/linkit.css
@@ -1,26 +1,73 @@
 
-#linkit { padding:1em; }
+#linkit-modal { padding: 20px; }
 
-#linkit .auto-item-info {
-  float:right;
-  font-size:10px;
+#linkit-modal #edit-linkit-link.with_imce { margin-bottom:10px; }
+
+#linkit-modal #edit-linkit-path,
+#linkit-modal #edit-linkit-search {
+  font-size: 1em;
+  height: 2em;
+  padding: 3px 25px 3px 5px;
+  width:440px;
 }
 
-#linkit .auto-item-info span { font-weight:bold; }
+#linkit-modal #edit-linkit-search { background: transparent url(../throbber-inactive.gif) no-repeat 99% 10px; }
+#linkit-modal #edit-linkit-search.fetching { background-image: url(../throbber-active.gif); }
 
-#linkit .auto-item-title {
-  margin-right:1.5em;
+/* Better Autocomplete */
+
+.better-autocomplete {
+  left: 1px;
+  top: -1px;
+}
+
+.better-autocomplete > .result img {
+  float: left;
+  margin: 0 5px 5px 0;
+}
+
+.better-autocomplete > .result > p:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+  font-size: 0;
+}
+
+/* Additional status types */
+
+.better-autocomplete > .result.status-ok {
+  background: #397928;
+  border-top-color: #6ba15d;
+}
+
+.better-autocomplete > .result.status-warning {
+  background: #8a3131;
+  border-top-color: #b77878;
+}
+
+.better-autocomplete > .result.status-notice {
+  border-top-width: 0;
+  background: #575757;
+}
+
+#linkit-modal #edit-linkit-attributes .form-item {
   float:left;
+  margin-right:20px;
+  width:200px;
 }
 
-span.throbber {
-  height: 15px;
-  margin: 1em 2px;
-  padding-left:20px;
-  background: transparent url(../../../../../misc/throbber.gif) no-repeat 0px -18px;
-  display:block;
+#linkit-modal #edit-linkit-attributes .form-item .linkit-attribute {
+  width:100%;
 }
 
-input#edit-link--2.with_imce {
-  margin-bottom:10px;
+.linkit-wrapper {
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px;
+  border-radius:5px;
+}
+
+.linkit-wrapper .ui-dialog-buttonpane {
+  display:none;
 }
