eMonocot logo in footer

--- a/sites/all/modules/custom/emonocot/emonocot_checklist/emonocot-checklist.css
+++ b/sites/all/modules/custom/emonocot/emonocot_checklist/emonocot-checklist.css
@@ -14,3 +14,23 @@
 .checklist-h1 {
 	margin-bottom: 0px;
 }
+
+.em_checklist_1 {
+	padding-left:20px;
+}
+
+.em_checklist_2 {
+	padding-left:30px;
+}
+
+.em_checklist_3 {
+	padding-left:40px;
+}
+
+.em_checklist_4 {
+	padding-left:50px;
+}
+
+.em_checklist_5 {
+	padding-left:60px;
+}
