Theme: moved the top green bar to inner container #page.

--- a/sites/all/themes/gbifwhite2012/css/global.css
+++ b/sites/all/themes/gbifwhite2012/css/global.css
@@ -6,14 +6,15 @@ html {
 }
 
 Body {
-  padding: 3px 0px 0px 0px;
+  padding: 0px;
   margin: 0px;
-  background: url("../images/top_bar.jpg") repeat-x;
   height: 100%;
 }
 
 #page {
   min-height: 100%;
+  padding-top: 3px;
+  background: url("../images/top_bar.jpg") repeat-x;
   position: relative;
 }
 
