Added portal access, combined d3 barchart.

--- a/sites/all/themes/gbifwhite2012/css/global.css
+++ b/sites/all/themes/gbifwhite2012/css/global.css
@@ -514,3 +514,7 @@ div.modal-forms-modal-content .form-item label {
   text-transform: uppercase;
   font-size: 1em;
 }
+
+#chart {
+  float: right;
+}
